# waterheater-laskuri

./: .gitignore  Cargo.toml  README.md
.github/workflows/: _quality_checks.yaml  build_lambda.yaml  build_server.yaml  workflow_build_message_handler.yaml  workflow_build_worker.yaml  workflow_pricing_worker.yaml  workflow_server.yaml  workflow_worker.yaml  workflow_worker_infra.yaml
lambda-infra/: index.ts  package-lock.json  package.json
message-handler/: Cargo.toml  Dockerfile
message-handler/src/: main.rs
pricing-worker/: dynamo.go  go.mod  go.sum  handler.go  http.go  main.go  types.go
pulumi-infra/: Pulumi.yaml  index.ts  package.json
server/: Cargo.toml  Dockerfile
server-infra/: Pulumi.yaml  index.ts  package-lock.json  package.json
server/app-runner-infra/: Pulumi.yaml  index.ts
server/infra/: index.ts  package-lock.json
server/kubernetes/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  kubeconfig.json  package-lock.json  package.json
server/lambda-infra/: Pulumi.server-lambda.yaml  index.ts  package-lock.json  package.json
server/src/: error.rs  http.rs  main.rs  middleware.rs  rate_limit.rs  rate_limiter.rs  secrets.rs
server/src/common/: db.rs  mod.rs  types.rs
server/src/tests/: service_tests.rs
server/src/v1/: handler.rs  mod.rs  router.rs  service.rs
server/src/v2/: handler.rs  mod.rs  router.rs  service.rs
src/: app.rs  db.rs  error.rs  main.rs  service.rs
src/tests/: service_tests.rs
wh-core/: Cargo.toml
wh-core/src/: lib.rs  test_utils.rs  types.rs  util.rs
worker/: Cargo.toml  Dockerfile
worker-infra/: alarms.ts  index.ts  message-handler.ts  monthly-pricing-worker.ts  package-lock.json  package.json  pnpm-lock.yaml  queues.ts  worker.ts
worker/infra/: Pulumi.yaml  index.ts  pnpm-lock.yaml
worker/src/: consumer.rs  main.rs  producer.rs  service.rs  types.rs
