[workspace]
members = [ "server", "wh-core", "worker"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
readme = "./README.md"

[workspace.dependencies]
serde = "1.0.202"
serde_json = "1.0.117"

aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.30.0"

chrono-tz = "0.9.0"
chrono = { version = "0.4.38", features = ["serde"] }

thiserror = "1.0.61"

utoipa = { version = "4.2.3", features = ["axum_extras"] }

strum = "0.26.2"
strum_macros = "0.26.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
