[workspace]
members = ["server", "wh-core", "worker"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
readme = "./README.md"

[workspace.dependencies]
serde = "1.0.210"
serde_json = "1.0.128"

aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.44.0"

chrono-tz = "0.9.0"
chrono = { version = "0.4.38", features = ["serde"] }

thiserror = "1.0.63"

utoipa = { version = "5.0.0-beta.0", features = ["axum_extras"] }

strum = "0.26.3"
strum_macros = "0.26.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
