[workspace]
members = ["server", "wh-core", "worker", "message-handler"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
readme = "./README.md"

[workspace.dependencies]
serde = "1.0.210"
serde_json = "1.0.128"

aws-config = { version = "1.5.6", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.47.0"

chrono-tz = "0.10.0"
chrono = { version = "0.4.38", features = ["serde"] }

thiserror = "1.0.64"

utoipa = { version = "4.2.3", features = ["axum_extras"] }

strum = "0.26.3"
strum_macros = "0.26.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
