[package]
name = "server"
version = "0.1.0"
edition = "2021"
target-dir = "./target"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.115"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
tracing-subscriber = "0.3.18"

anyhow = "1.0.82"
tower_governor = "0.3.2"
aws-sdk-ssm = "1.22.0"

chrono = { workspace = true }
chrono-tz = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
thiserror = { workspace = true }

utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
