[package]
name = "waterheater-calc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
lambda_http = "0.13"

tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
tracing-subscriber = "0.3.18"

anyhow = "1.0.87"
tower_governor = "0.4.2"
aws-sdk-ssm = "1.46.0"

chrono = { workspace = true }
chrono-tz = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }

utoipa-swagger-ui = { version = "7", features = ["axum"] }
openssl = { version = "0.10.66", features = ["vendored"] }

wh-core = { path = "../wh-core" }
