[package]
name = "waterheater-calc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"

aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
lambda_http = { version = "0.13", features = ["apigw_http"] }
aws-sdk-ssm = "1.48.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }

tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
tracing-subscriber = "0.3.18"

chrono = { workspace = true }
chrono-tz = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }

utoipa-swagger-ui = { version = "7", features = ["axum"] }
openssl = { version = "0.10.66", features = ["vendored"] }

wh-core = { path = "../wh-core" }

deadpool-redis = { version = "0.18.0", features = ["rt_tokio_1"] }
redis = { version = "0.27.2", default-features = false, features = [
  "tls",
  "tokio-native-tls-comp",
] }

once_cell = "1.19.0"
tracing = "0.1.40"
