[package]
name = "wh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono-tz = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }

