[package]
name = "waterheater-calc-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.0", default-features = false, features = [
  "cloudwatch_events",
] }

lambda_runtime = "0.11.1"
tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.115"
chrono-tz = "0.8.6"
chrono = "0.4.37"
anyhow = "1.0.81"
thiserror = "1.0.58"
url = "2.5.0"
aws-config = { version = "1.1.9", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.20.0"
openssl = { version = "0.10.64", features = ["vendored"] }
