[package]
name = "worker"
version = "0.1.0"
edition = "2021"
target-dir = "./target"

[dependencies]
aws_lambda_events = { version = "0.15.0", default-features = false, features = [
  "cloudwatch_events",
] }

lambda_runtime = "0.11.1"
tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.115"
anyhow = "1.0.81"
url = "2.5.0"
openssl = { version = "0.10.64", features = ["vendored"] }


chrono = { workspace = true }
chrono-tz = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

wh-core = { path = "../wh-core/" }
futures = "0.3.30"
